// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadialGauge color utils buildGradientColors should map threshold colors correctly (with baseColor if displayProcessor does not return colors) 1`] = `
[
  {
    "color": "#444444",
    "percent": 0,
  },
  {
    "color": "#FADE2A",
    "percent": 0.5,
  },
  {
    "color": "#F2495C",
    "percent": 0.8,
  },
  {
    "color": "#444444",
    "percent": 1,
  },
]
`;

exports[`RadialGauge color utils buildGradientColors should map threshold colors correctly (with baseColor if displayProcessor does not return colors) 2`] = `
[
  {
    "color": "#FF0000",
    "percent": 0,
  },
  {
    "color": "#FADE2A",
    "percent": 0.5,
  },
  {
    "color": "#F2495C",
    "percent": 0.8,
  },
  {
    "color": "#FF0000",
    "percent": 1,
  },
]
`;

exports[`RadialGauge color utils buildGradientColors should return gradient colors for by-value color mode in dark theme 1`] = `
[
  {
    "color": "#181b1f",
    "percent": 0,
  },
  {
    "color": "#1F60C4",
    "percent": 1,
  },
]
`;

exports[`RadialGauge color utils buildGradientColors should return gradient colors for by-value color mode in light theme 1`] = `
[
  {
    "color": "#ffffff",
    "percent": 0,
  },
  {
    "color": "#1250B0",
    "percent": 1,
  },
]
`;

exports[`RadialGauge color utils buildGradientColors should return gradient colors for continuous color modes 1`] = `
[
  {
    "color": "rgb(0, 32, 81)",
    "percent": 0,
  },
  {
    "color": "rgb(17, 54, 108)",
    "percent": 0.125,
  },
  {
    "color": "rgb(60, 77, 110)",
    "percent": 0.25,
  },
  {
    "color": "rgb(98, 100, 111)",
    "percent": 0.375,
  },
  {
    "color": "rgb(127, 124, 117)",
    "percent": 0.5,
  },
  {
    "color": "rgb(154, 148, 120)",
    "percent": 0.625,
  },
  {
    "color": "rgb(187, 175, 113)",
    "percent": 0.75,
  },
  {
    "color": "rgb(226, 203, 92)",
    "percent": 0.875,
  },
  {
    "color": "rgb(253, 234, 69)",
    "percent": 1,
  },
]
`;

exports[`RadialGauge color utils buildGradientColors should return gradient colors for fixed color mode in dark theme 1`] = `
[
  {
    "color": "#030108",
    "percent": 0,
  },
  {
    "color": "#442299",
    "percent": 0.45,
  },
  {
    "color": "#442299",
    "percent": 0.55,
  },
  {
    "color": "#ffffff",
    "percent": 1,
  },
]
`;

exports[`RadialGauge color utils buildGradientColors should return gradient colors for fixed color mode in light theme 1`] = `
[
  {
    "color": "#9689ca",
    "percent": 0,
  },
  {
    "color": "#442299",
    "percent": 0.45,
  },
  {
    "color": "#442299",
    "percent": 0.55,
  },
  {
    "color": "#030108",
    "percent": 1,
  },
]
`;
